Revision history for Pandoc-Elements

{{$NEXT}}

0.14  2015-12-11 14:11:51 CET
    - refactor and introduce Pandoc::Filter::Lazy

0.13  2015-12-09 12:43:50 CET
    - fix passing of output format
    - add method match (experimental)
    - added examples myemph.pl and theorem.pl

0.12  2015-12-08 13:55:43 CET
    - added pod2pandoc script and Pod::Simple::Pandoc
    - added string as method to replace function stringify
    - fixed nasty bug in Pandoc::Element constructor reuse

0.11  2015-11-30 13:47:17 CET
    - UTF-8 output with pandoc_walk and pandoc_filter
    - include tests of pandoc-walk

0.10  2015-11-26 22:07:39 CET
    - added utility script pandoc-walk
    - new method: pandoc_walk
    - provide special variable $_ to action functions

0.09  2015-11-22 20:40:49 CET
    - support definition of filters as hash

0.08  2015-09-24 11:10:54 CEST
    - new helper function: citation

0.07  2015-09-22 15:39:49 CEST
    - extend documentation and examples

0.06  2015-01-19 12:58:09 CET
    - fix endless recursion bug (issue #7)
    - add walker methods to documente elements (issue #4)
    - simplify access to attributes (issue #8, not documented yet)
    - rename and document function pandoc_json
    - extend documentation

0.05  2014-12-27 15:45:38 CET
    - fixed filter bug (issue #5)
    - added examples
    - added more accessor methods
    - remove method value

0.04  2014-10-27 14:09:21 CET
    - added accessor methods (issue #1)
    - refactoring

0.03  2014-10-26 20:52:58 CET
    - use blessed objects
    - new methods to_json and from_json
    - added Pandoc::Filter
    - changed calling syntax of Pandoc::Walker

0.02  2014-10-26 10:34:37 CET
    - added Pandoc::Walker
    - new helper method: element

0.01  2014-10-23 21:34:25 CEST
    - initial release